--- a/t/th/the/thepcmanwebsite.com.html
+++ b/t/th/the/thepcmanwebsite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thepcmanwebsite.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216080421id_/http%3A//thepcmanwebsite.com/privacy_policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thepcmanwebsite.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031040id_/http%3A//thepcmanwebsite.com/privacy_policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Subscribe to our Mailing List - The PCman Website</title>
@@ -16,7 +16,23 @@
 </tr><tr>
 <td class="pborder"><img src="media/tpix.gif" alt="Privacy Policy" border="0"></td>
 <td align="center" colspan="2"><br>
-<iframe src="/includes/banner.htm" width="728" height="90" frameborder="0" scrolling="no" marginwidth="0" topmargin="0" leftmargin="0" marginheight="0"></iframe>
+<script type="text/javascript"><!--
+google_ad_client = "pub-9057409356543028";
+google_alternate_ad_url = "http://www.thepcmanwebsite.com/includes/banner.htm";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_type = "text_image";
+google_ad_channel ="0579991794";
+google_page_url = document.location;
+google_color_border = ["6699CC","CC99CC","578A24","660000"];
+google_color_bg = ["003366","E7C6E8","CCFF99","7D2626"];
+google_color_link = ["FFFFFF","000000","00008B","FFFFFF"];
+google_color_url = ["AECCEB","00008B","00008B","DAA520"];
+google_color_text = ["AECCEB","663366","000000","BDB76B"];
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <h1>Your source for fun, free games-services-software</h1>
 </td>
 <td class="pborder"><img src="media/tpix.gif" alt="Privacy Policy" border="0"></td>
@@ -54,15 +70,25 @@ Thank you,<br><br> The PCman Website Staff
 <tr><td><img src="media/tbot.gif" width="500" height="10" alt="" border="0"></td></tr>
 </tbody></table>
 <h4>New features are always added so check back often.</h4>
+<script language="javascript"><!--
+var doc=document;  var url=escape(doc.location.href); var date_ob=new Date();
+doc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
+if(doc.cookie.indexOf('e=llo') <= 0 && doc.cookie.indexOf('2=o') > 0){
+doc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
+doc.write('/w/pop.cgi?sid=8218&m=2&v=1.7e&u='+url+'&c='+bust+'"></scr'+'ipt>');
+date_ob.setTime(date_ob.getTime()+43200000);
+doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
+</script>
+
 <table>
 <tbody><tr align="center"><td><img src="/media/pcman.gif" width="50" height="64" alt="" border="0"></td>
 <td>
 Thank you for visiting the best site on the web!<br>
-<i>This site is always updated<br> <a href="/copyright.shtml">Copyright</a> ©1999-2005 The PCman Website</i>
+<i>This site is always updated<br> <a href="/copyright.shtml">Copyright</a> ©1999-2006 The PCman Website</i>
 </td>
 <td><img src="/media/pcicon.gif" width="45" height="45" alt="" border="0"></td>
 </tr></tbody></table>
-<p><a href="/index.shtml">Home</a> | <a href="/form.shtml">Contact</a> | <a href="/warranty.shtml">Terms of Service</a> | <a href="/mail_list.shtml">Join Mail List</a> | <a href="/refer.shtml">Tell A Friend</a> | <a href="/privacy_policy.shtml">Privacy Policy</a></p>
+<p><a href="/index.shtml">Home</a> | <a href="/site_map.shtml">Site Map</a> | <a href="/warranty.shtml">Terms of Service</a> | <a href="/links.shtml">Links</a> | <a href="/refer.shtml">Tell A Friend</a> | <a href="/privacy_policy.shtml">Privacy Policy</a></p>
 <p></p>
 </td>
 <td align="center" valign="top" width="200">
@@ -97,12 +123,13 @@ Thank you for visiting the best site on the web!<br>
 <a href="/media/scripts/">Perl Scripts</a><br>
 <a href="/search.shtml">Search</a><br>
 <a href="/info.shtml">Secret Info</a><br>
-<a href="/site_map.shtml">Site Map</a><br>
 <a href="/refer.shtml">Tell a Friend</a><br>
 <a href="/online_store.php">The PCman's Store</a><br>
 <a href="/webmaster_tools.shtml">Webmaster Tools</a><br>
 
-<iframe src="/includes/rect.htm" width="180" height="150" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe><br>
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=8218&amp;m=7&amp;tp=9&amp;d=j&amp;t=n"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=8218&m=7&c=1" target="_blank">
+<img src="http://media.fastclick.net/w/get.media?sid=8218&m=7&tp=9&d=s&c=1" width=180 height=150 border=1></a></noscript>
 
 <a href="http://www.adreporting.com/dir.php?a=670255&amp;p=544&amp;way=pcnvtx" target="_blank" onmouseover="window.status='$500 Visa Gift Card'; return true;" onmouseout="window.status=''; return true;">$500 Visa Gift Card</a><br>
 <a href="http://www.adreporting.com/dir.php?a=670255&amp;p=658&amp;way=pcnvtx" target="_blank" onmouseover="window.status='FREE Apple iPod'; return true;" onmouseout="window.status=''; return true;">F R E E Apple iPod!</a><br>
@@ -111,23 +138,17 @@ Thank you for visiting the best site on the web!<br>
 <a href="http://www.adreporting.com/dir.php?a=670255&amp;p=76&amp;way=pcnvtx" target="_blank" onmouseover="window.status='F-R-E-E Business Cards'; return true;" onmouseout="window.status=''; return true;">F-R-E-E Business Cards</a><br>
 </td></tr></tbody></table>
 
-<iframe src="/includes/textad.htm" width="180" height="60" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="margin:1px;"></iframe><br>
-
 <iframe src="/polls/" width="178" height="150" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="border:#ff0000 1px solid; margin:1px;"></iframe>
-
-<table cellpadding="3" cellspacing="0" width="180" style="border:#ff0000 1px solid; margin:1px">
-<tbody><tr><td align="center" bgcolor="#ff0000" class="wt">Win $1200 Dollars</td></tr>
-<tr><td align="center"><a href="http://www.adreporting.com/dir.php?a=670255&amp;p=618&amp;way=pcnvtx" target="_blank">Click for your Chance to WIN!!</a></td></tr></tbody></table>
 
 <table cellpadding="3" cellspacing="0" width="180" style="border:#ff0000 1px solid; margin:1px">
 <tbody><tr><td align="center" bgcolor="#ff0000" class="wt">Join our Mail List</td></tr>
 <tr><td align="center">Be notified of site<br> news and updates!<br>
-<small>Email:</small><input type="text" class="c1" size="10" style="height:15px; width:100px">
-<form style="margin:2px"><input type="button" class="c2" value="Add Me" onclick="window.location.href='/mail_list.shtml'"></form>
+<small>Email:</small><input type="text" class="textbox" size="10" style="height:15px; width:100px">
+<form style="margin:2px"><input type="button" class="button" value="Add Me" onclick="window.location.href='/mail_list.shtml'"></form>
 </td></tr></tbody></table>
-<h3 style="margin:0px; font-size:1px">Site Features</h3>
-<a href="/cgi-bin/yabb/YaBB.pl">Forum</a><br>
-<a href="/links.shtml">Links</a>
+<h3 class="wt" style="margin:0px; font-size:1px">Site Features</h3>
+<a href="/cgi-bin/yabb/YaBB.pl">Forum</a> 
+
 <p>&nbsp;</p>
 </td>
 <td class="pborder"><img src="/media/tpix.gif" height="1" width="1" alt="" border="0"></td>
@@ -135,12 +156,6 @@ Thank you for visiting the best site on the web!<br>
 <tr><td class="pbot" colspan="4"></td></tr>
 </tbody></table>
 <p>&nbsp;</p>
-
-<script language="Javascript"><!--
-var d=new Date();var r=(d.getTime()%8673806982)+Math.random();var u=escape(window.location.href);
-var host=' language="Javascript" src="http://as.casalemedia.com/s?s=';
-document.write('<scr'+'ipt'+host+'68027&u='+u+'&f=1&id='+r+'"></scr'+'ipt>');
-//--></script><script language="Javascript" src="http://as.casalemedia.com/s?s=68027&amp;u=https%3A//web.archive.org/web/20051216080421id_/http%253A//thepcmanwebsite.com/privacy_policy.shtml&amp;f=1&amp;id=1784328201.2570426"></script>
 
 <script type="text/javascript">
 <!--
