--- a/i/in/ins/instantssl.com.html
+++ b/i/in/ins/instantssl.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the instantssl.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231085529id_/http%3A//www.instantssl.com/ssl-certificate-legal/ssl-certificate-privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the instantssl.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031220id_/http%3A//www.instantssl.com/ssl-certificate-legal/ssl-certificate-privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>SSL Certificate Free SSL Secure Server Certificate Branded SSL</title>
@@ -53,7 +53,7 @@ Instant SSL - <a href="http://www.instantssl.com/" title="SSL Certificate Author
 		<input type="hidden" name="e_invalidLoginDetails">
 <input type="hidden" name="currency">
 <input type="hidden" name="region">
-<input type="hidden" name="country">
+<input type="hidden" name="country"><input type="hidden" name="ap"><input type="hidden" name="referrerURL"><input type="hidden" name="entryURL">
 	
 </form></span></div>
 
@@ -161,7 +161,7 @@ By using our Web site, customers consent to the collection and use of this infor
 <div id="footer">
 <a href="/index.html" title="SSL Certificate"><img src="/ssl-certificate-images/test/body_footer.gif" alt="Compatible with 99.3% of Browsers" class="right"></a>
 </div>
-     <script language="JavaScript1.2" type="text/javascript" src="http://secure.comodo.net/prices/prices.js"></script>
+     <script language="JavaScript1.2" type="text/javascript" src="http://secure.comodo.net/prices.js"></script>
     <noscript>
       <p>This page is best viewed with JavaScript enabled</p>
     </noscript>
