--- a/d/du/dun/dundee.ac.uk.html
+++ b/d/du/dun/dundee.ac.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dundee.ac.uk privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214111234id_/http%3A//www.dundee.ac.uk/general/privacycode.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dundee.ac.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031312id_/http%3A//www.dundee.ac.uk/general/privacycode.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en"><head>
 <title>University of Dundee: Disclaimer and Copyright Notice</title>
@@ -131,7 +131,7 @@ function MM_swapImgRestore() { //v3.0
 		<tr><td width="6" valign="top"></td><td width="140"><b class="front">Prospectuses:</b></td></tr>
         	<tr><td width="6" valign="top"></td><td width="140"><a href="/prospectus/undergrad/">Undergraduate</a></td></tr>
         	<tr><td width="6" valign="top"></td><td width="140"><a href="/prospectus/graduate/">Postgraduate</a></td></tr>
-        	<tr><td colspan="2"><br><a class="nohover" href="http://www.dundee.ac.uk/externalrelations/funds/"><img src="/images/frontpage/banners/giving.gif" alt="Giving to Dundee." border="0"></a></td></tr>
+        	<!--<tr><td colspan="2"><br /><a class="nohover" href="http://www.dundee.ac.uk/externalrelations/funds/"><img src="/images/frontpage/banners/giving.gif" alt="Giving to Dundee." border="0" /></a></td></tr>-->
         	</tbody></table>
 
 
@@ -190,7 +190,7 @@ function MM_swapImgRestore() { //v3.0
 <tr><td>
 <table border="0" cellspacing="0" cellpadding="2" width="710">
   <tbody><tr valign="bottom" bgcolor="#999999">
-  <td bgcolor="#999999" align="center"><a class="navbot" href="/"><font color="#FFFFFF">University Home</font></a> <font color="white">|</font> <a class="navbot" href="/uodscan.htm"><font color="#FFFFFF">Search Centre</font></a> <font color="white">|</font> <a class="navbot" href="/main/contacts.htm"><font color="#FFFFFF">Contacts</font></a> <font color="white">|</font> <a class="navbot" href="/main/atoz.htm"><font color="#FFFFFF">A to Z Index</font></a> <font color="#FFFFFF">|</font> <a class="navbot" href="/general/travel.htm"><font color="#FFFFFF">Getting to Dundee</font></a> <font color="#FFFFFF">|</font> <a class="navbot" href="/links/"><font color="#FFFFFF">Links Library</font></a></td>
+  <td bgcolor="#999999" align="center"><a class="navbot" href="/"><font color="#FFFFFF">University Home</font></a> <font color="white">|</font> <a class="navbot" href="/uodscan.htm"><font color="#FFFFFF">Search Centre</font></a> <font color="white">|</font> <a class="navbot" href="/main/contacts.htm"><font color="#FFFFFF">Contacts</font></a> <font color="white">|</font> <a class="navbot" href="/main/atoz.htm"><font color="#FFFFFF">A to Z Index</font></a> <font color="#FFFFFF">|</font> <a class="navbot" href="/general/travel/"><font color="#FFFFFF">Travel Information</font></a> <font color="#FFFFFF">|</font> <a class="navbot" href="/links/"><font color="#FFFFFF">Links Library</font></a></td>
   </tr>
 </tbody></table>
 </td></tr>
