--- a/t/th/the/theupsstore.com.html
+++ b/t/th/the/theupsstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theupsstore.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212130839id_/http%3A//www.theupsstore.com/pripol.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theupsstore.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031352id_/http%3A//theupsstore.com/pripol.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <script language="JavaScript" src="/javascript/global.js" type="text/javascript"></script><script language="JavaScript" src="https://web.archive.org/web/20031001195044/http://www.theupsstore.com/javascript/api.js" type="text/javascript"></script><link rel="stylesheet" type="text/css" href="http://www.theupsstore.com/stylesheets/ie.css"><link rel="stylesheet" type="text/css" href="http://www.theupsstore.com/stylesheets/print.css" media="PRINT">
@@ -166,7 +166,7 @@
 
 		document.write( "<a href='" + path + "'><img alt='" + alt + "' border=0 height= " + height + " src='" + banner + "' width= " + width + "></a>" ); 
 		-->
-		</script><a href="/products/addproand.html"><img alt="Earn UPS rewards with The UPS Store Visa Platinum card." border="0" height="140" src="/img/en/bnr_g_sol_upsstore_visa_m.gif" width="144"></a></td>
+		</script><a href="/redir/locator.asp"><img alt="We are packing experts." border="0" height="140" src="/img/en/bnr_g_pkg_experts_m.gif" width="144"></a></td>
 	</tr>
 	<tr>
 		<td height="29" width="144"><img alt="" border="0" height="29" src="/img/1.gif" width="1"></td>
@@ -285,7 +285,7 @@
 		Attention: Legal Editor<br>
 		6060 Cornerstone Ct. West, Dept. 800<br>
 		San Diego, CA 92121-3795<br>
-		(888) 346-3623 in USA<br>
+		(800) 789-4623 in USA<br>
 		(858) 455-8800<br>
 		<a href="mailto:editor@mbe.com">editor@mbe.com</a><br>
 		<br>
@@ -393,7 +393,7 @@
 	<span class="noprint"><a href="/index.html">Home</a>&nbsp;|&nbsp;<a href="/redir/locator.asp">Locations</a>&nbsp;|&nbsp;<a href="/qcc/qcc.asp">Calculate Cost</a>&nbsp;|&nbsp;<a href="/tracking/tra.html">Tracking</a>&nbsp;|&nbsp;<a href="/products/proandser.html">Products &amp; Services</a>&nbsp;|&nbsp;<a href="/franchise/fraopp.html">Franchise Opportunities</a>&nbsp;|&nbsp;<a href="/about/abotheups.html">About The UPS Store</a></span><br>
 	<span class="noprint"><a href="/customer/cusser.html">Customer Service</a>&nbsp;|&nbsp;<a href="http://www.ups.com/">UPS.com</a>&nbsp;|&nbsp;<a href="http://mbeweb.mbe.com/index.htm">MBE Web</a></span><br><br>
 	MBE is a UPS® company. The UPS Store® locations are independently owned and operated by franchisees of Mail Boxes Etc., Inc. in the USA and by its international master licensees and their franchisees outside of the USA. Services and hours of operation may vary by location.<br>
-	Copyright&nbsp;© 1994-2005 United Parcel Service of America, Inc.&nbsp; All rights reserved.<br>
+	Copyright&nbsp;© 1994-2006 United Parcel Service of America, Inc.&nbsp; All rights reserved.<br>
 	<span class="noprint"><a href="/pripol.html">Privacy Policy</a>&nbsp;|&nbsp;<a href="/terandcon.html">Terms &amp; Conditions of Service</a></span>
 	</div>
 	</td>
