--- a/l/la/lay/layitlow.com.html
+++ b/l/la/lay/layitlow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the layitlow.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218050222id_/http%3A//www.layitlow.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the layitlow.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031656id_/http%3A//www.layitlow.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -50,8 +50,8 @@ i=u+x+'&sid='+id+'&m=1&tp=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=4528&amp;m=1&amp;tp=1&amp;f=b&amp;v=1.4&amp;c=5709&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=4528&m=1&c=5709"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=4528&m=1&tp=1&f=b&v=1.4&c=5709&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=4528&amp;m=1&amp;tp=1&amp;f=b&amp;v=1.4&amp;c=7080&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=4528&m=1&c=7080"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=4528&m=1&tp=1&f=b&v=1.4&c=7080&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=4528&m=1&c=1"  target="_blank">
@@ -61,13 +61,20 @@ width=468 height=60 border=1></a></noscript>
 		<td bgcolor="996600" width="6" height="60"><img src="/header_right_6x60.gif" width="6" height="60" border="0" alt=""></td>
 	</tr>
 	<tr>
-		<td bgcolor="FFFFFF" colspan="3" width="650" height="59"><img src="/header_bottom_650x59.gif" width="650" height="59" border="0" alt="" usemap="#Header_33"></td>
+		<td bgcolor="996600" colspan="3" width="650" height="33"><img src="/header_bottom_650x33.gif" width="650" height="33" border="0" alt="" usemap="#Header_33"></td>
 	</tr>
 </tbody></table>
+<table border="0" cellspacing="0" cellpadding="0" width="650" height="45">
+<tbody><tr>
+<td bgcolor="FFFFFF"><img src="http://www.layitlow.com/images/sponsors/SundayDriver-header_650x45.gif" width="650" height="45" border="0" alt="" usemap="#650x45_Map"></td>
+</tr>
+</tbody></table>
 </center>
+<map name="650x45_Map">
+<area shape="rect" alt="Enter to win a free DVD" coords="528,0,649,44" href="http://www.layitlow.com/sundaydriver.shtml" target="_blank">
+<area shape="rect" alt="Go to Sunday Driver website" coords="0,0,527,44" href="http://www.rockstargames.com/sundaydriver/" target="_blank">
+</map>
 		<map name="Header_33">
-		<area shape="rect" alt="Win a Free DVD" coords="0,33,376,58" href="http://www.layitlow.com/truucha.shtml" target="_blank">
-		<area shape="rect" alt="Truucha Lowrider Videos" coords="377,33,649,58" href="http://www.truucha.com" target="_blank">
 		<area shape="rect" alt="Help - Search, Contact Info, Top Sites" coords="596,0,649,32" href="http://www.layitlow.com/help.shtml">
 		<area shape="rect" alt="Index - Full Site Outline" coords="527,0,595,32" href="http://www.layitlow.com/siteoutline.shtml">
 		<area shape="rect" alt="Info - Events, Club Listings, Links" coords="468,0,526,32" href="http://www.layitlow.com/info.shtml">
@@ -201,7 +208,12 @@ width=468 height=60 border=1></a></noscript>
 <center>
 
 <br> <!--Separator-->
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-286189-1";
+urchinTracker();
+</script>
 <table border="0" cellspacing="0" cellpadding="0" width="650" align="center">
 	<tbody><tr>
 		<td align="center">
@@ -214,11 +226,12 @@ width=468 height=60 border=1></a></noscript>
 		<a href="http://www.layitlow.com/girls.shtml">Girls</a> |
 		<a href="http://www.layitlow.com/store.shtml">Store</a> |
 		<a href="http://www.layitlow.com/info.shtml">Info</a> |
-		<a href="http://www.layitlow.com/siteoutline.shtml">Site Outline</a> |
+		<a href="http://www.layitlow.com/siteoutline.shtml">Outline</a> |
 		<a href="http://www.layitlow.com/help.shtml">Help</a> |
 		<a href="http://www.layitlow.com/privacy.shtml">Privacy Statement</a> |
-		<a href="http://www.fastclick.com/re.f?4528" target="_top">Advertising</a>
-		</p></font><p><font face="verdana" size="1">© 2005 LayItLow.com
+		<a href="https://adwords.google.com/select/OnsiteSignupLandingPage?client=ca-pub-4852540834579584&amp;referringUrl=http://www.layitlow.com/">Advertise on this site</a>
+
+		</p></font><p><font face="verdana" size="1">© 2006 LayItLow.com
 		</font>
 		</p></td>
 	</tr>
