--- a/c/cr/cre/creationent.com.html
+++ b/c/cr/cre/creationent.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the creationent.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212151114id_/http%3A//www.creationent.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the creationent.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031728id_/http%3A//creationent.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Creation Entertainment - Star Trek - Stargate SG-1 - Xena - LOTR - Conventions &amp; Merchandise</title>
@@ -68,34 +68,55 @@ function MM_swapImage() { //v3.0
 <table width="779" border="0" align="center" cellpadding="0" cellspacing="0">
 <tbody><tr valign="top"> 
     
-<td width="280" height="313" bgcolor="#BBC5CE"><a href="email.htm"><img src="pics/emaillists.gif" name="emaillists" width="281" height="28" border="0" id="emaillists"> 
-</a> 
-<table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
-<tbody><tr> 
-<td width="260" height="48"> <p class="small3">Keep up to date with our convention 
-events and merchandise news! </p></td>
-</tr>
-</tbody></table>
-<a href="http://cgi6.ebay.com/ws/eBayISAPI.dll?ViewSellersOtherItems&amp;include=0&amp;userid=creationent&amp;sort=3&amp;rows=25&amp;since=-1&amp;rd=1" target="_blank"><img src="pics/ebay.gif" name="ebay" width="281" height="28" border="0" id="ebay"></a> 
-<table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
-<tbody><tr> 
-<td width="260" height="34"> <p class="small3">See Creation's great items now 
-up for auction! </p></td>
-</tr>
-</tbody></table>
-<a href="shop.htm"><img src="pics/autograph.gif" name="autograph" width="281" height="28" border="0" id="autograph"></a> 
-<table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
-<tbody><tr> 
-<td width="260" height="34"> <p class="small3">Hand-signed photos by the world's 
-top sci-fi stars!</p></td>
-</tr>
-</tbody></table>
-<a href="charities.htm"><img src="pics/charities.gif" name="charities" width="281" height="28" border="0" id="charities"></a> 
-<table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
-<tbody><tr> 
-<td width="260" height="34"> <p class="small3">Some of the charitable causes we support.</p></td>
-</tr>
-</tbody></table></td>
+<td width="280" height="313" bgcolor="#BBC5CE"><a href="sponsorships.htm" target="_top"><img src="pics/sponsorship.gif" name="sponsors" width="281" height="28" border="0" id="sponsors"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">Opportunities to reach a loyal genre audience.</p></td>
+    </tr>
+  </tbody></table>
+  <a href="email.htm"><img src="pics/emaillists.gif" name="emaillists" width="281" height="28" border="0" id="emaillists"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">Keep up to date with our convention events and merchandise news! </p></td>
+    </tr>
+  </tbody></table>
+  <a href="http://cgi6.ebay.com/ws/eBayISAPI.dll?ViewSellersOtherItems&amp;include=0&amp;userid=creationent&amp;sort=3&amp;rows=25&amp;since=-1&amp;rd=1" target="_blank"><img src="pics/ebay.gif" name="ebay" width="281" height="28" border="0" id="ebay"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">See Creation's great items now up for auction! </p></td>
+    </tr>
+  </tbody></table>
+  <a href="wholesale.htm"><img src="pics/wholesale_orders.gif" name="charities" width="281" height="28" border="0" id="charities"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">Vendors and store owners, click for information. </p></td>
+    </tr>
+  </tbody></table>
+  <a href="autographs/index.htm"><img src="pics/autograph.gif" name="autograph" width="281" height="28" border="0" id="autograph"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">Hand-signed photos by world sci-fi &amp; genre stars!</p></td>
+    </tr>
+  </tbody></table>
+  <a href="banners.htm"><img src="pics/banners_for_your_site.gif" name="banners" width="281" height="28" border="0" id="banners"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34"><p class="small3">Link back to our site with these colorful banners. </p></td>
+    </tr>
+  </tbody></table>
+  <a href="ouremail.htm"> <img src="pics/read_email.gif" name="read_email" width="281" height="28" border="0" id="read_email"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34" valign="top"><p align="left" class="small3">Comments about our events and service.</p></td>
+    </tr>
+  </tbody></table>
+  <a href="charities.htm"><img src="pics/charities.gif" name="charities" width="281" height="28" border="0" id="charities"></a>
+  <table width="280" border="0" cellpadding="0" cellspacing="0" bgcolor="#BBC5CE">
+    <tbody><tr>
+      <td width="260" height="34" valign="top"><p class="small3">Some of the charitable causes we support.</p></td>
+    </tr>
+  </tbody></table>
+  <a href="dealers.htm"><img src="pics/dealer_table_information.gif" alt="Dealer Table Information" width="281" height="28" border="0"></a> </td>
     <td width="549"> <table width="100%" border="0" cellspacing="0" cellpadding="10">
         <tbody><tr>
           
@@ -185,7 +206,7 @@ what circumstances we disclose it.</p>
 <p><strong>Contact Us</strong></p>
 <p>Creation Entertainment welcomes your questions, comments, and concerns about 
 privacy. Please send us any and all feedback pertaining to this, or any other 
-issue, at <a href="mailto:webmaster@www.creationent.com?Subject=Contact Creation Entertainment">webmaster@www.creationent.com</a>. 
+issue, at <a href="mailto:webmaster@creationent.com">webmaster@creationent.com</a>. 
 Or you can reach us by posted mail at:</p>
 <p>Creation Entertainment<br>
 217 S. Kenwood Street<br>
