--- a/m/m9/m90/m90.org.html
+++ b/m/m9/m90/m90.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the m90.org privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229134203id_/http%3A//m90.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the m90.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031853id_/http%3A//www.m90.org/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Media 90 corp</title>
